testsuite/tests/th/T2597b.stderr

T2597b.hs:8:9: error:
    • Empty stmt list in do-block
      When splicing a TH expression: do
    • In the untyped splice: $mkBug2
